--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -23,18 +23,14 @@
  MLW_FOPOL_SAF.1.t1: "Malawian Armed Forces Seek Security Co-operation"
  MLW_FOPOL_SAF.1.d1: ""
 
-
  MLW_FOPOL_SAF.1.t2: "uMkhonto weSizwe Offers Training Co-operation Pact"
  MLW_FOPOL_SAF.1.d2: ""
-
 
  MLW_FOPOL_SAF.1.t3: "South African PMCs Offer Security Co-operation Plan"
  MLW_FOPOL_SAF.1.d3: ""
 
-
  MLW_FOPOL_SAF.1.t4: "Malawian Armed Forces Seek Security Co-operation"
  MLW_FOPOL_SAF.1.d4: ""
-
 
  MLW_FOPOL_SAF.1.t5: "Malawian Armed Forces Offer to Stand with South Africa"
  MLW_FOPOL_SAF.1.d5: ""
@@ -49,26 +45,116 @@
  MLW_FOPOL_SAF.1.N1: "You and what army?"
  MLW_FOPOL_SAF.1.O6: "They're doing what?!"
 
+ MLW_FOPOL_SAF.10.t: "[SAF.GetName] Begins Co-operation Efforts"
+ MLW_FOPOL_SAF.10.d: "" # fix
+ MLW_FOPOL_SAF.10.O1: "We have strategies to share!"
+
+ MLW_FOPOL_SAF.11.t: "[SAF.GetName] Refuses Co-operation Efforts"
+ MLW_FOPOL_SAF.11.d: "" # fix
+ MLW_FOPOL_SAF.11.O1: "But we're keeping their border safe!"
 
 
 
+ MLW_FOPOL_SAF.2.t1: "South African-Malawian Training Exercises"
+ MLW_FOPOL_SAF.2.d1: "" # fix
+
+ MLW_FOPOL_SAF.2.t2: "MK and Armed Forces Convene on Training Grounds"
+ MLW_FOPOL_SAF.2.d2: "" # fix
+
+ MLW_FOPOL_SAF.2.t3: "South African PMCs Offer Training Regime"
+ MLW_FOPOL_SAF.2.d3: "" # fix
+
+ MLW_FOPOL_SAF.2.t4: "South African-Malawian Training Exercises"
+ MLW_FOPOL_SAF.2.d4: "" # fix
+
+ MLW_FOPOL_SAF.2.t5: "South African-Malawian Training Exercises"
+ MLW_FOPOL_SAF.2.d5: "" # fix
+
+ MLW_FOPOL_SAF.2.O1: "We look forwards to the wargames!"
+ MLW_FOPOL_SAF.2.O2: "The paramilitaries can teach us a thing or two."
+ MLW_FOPOL_SAF.2.O3: "We'd rather train the AWB than work with commies."
+ MLW_FOPOL_SAF.2.O4: "As long as the training is anti-protestor."
+ MLW_FOPOL_SAF.2.O5: "We can learn how to better hold onto power!"
+ MLW_FOPOL_SAF.2.Y1: "Your place, or mine?"
+ MLW_FOPOL_SAF.2.N1: "What would we gain from this?"
+
+ MLW_FOPOL_SAF.20.t: "[SAF.GetName] Signs Training Treaties"
+ MLW_FOPOL_SAF.20.d: "" # fix
+ MLW_FOPOL_SAF.20.O1: "Who will win the first wargames?"
+
+ MLW_FOPOL_SAF.21.t: "[SAF.GetName] Refuses Co-operative Training"
+ MLW_FOPOL_SAF.21.d: "" # fix
+ MLW_FOPOL_SAF.21.O1: "We will hope for a change of heart in future."
 
 
 
+ MLW_FOPOL_SAF.3.t: "Joint Anti-Poaching Patrols"
+ MLW_FOPOL_SAF.3.d1: "" # fix
+
+ MLW_FOPOL_SAF.3.d2: "" # fix
+
+ MLW_FOPOL_SAF.3.d3: "" # fix
+
+ MLW_FOPOL_SAF.3.d4: "" # fix
+
+ MLW_FOPOL_SAF.3.d5: "" # fix
+
+ MLW_FOPOL_SAF.3.O1: "Poachers hurt us all."
+ MLW_FOPOL_SAF.3.O2: "Hopefully they see reason for compassion."
+ MLW_FOPOL_SAF.3.O3: "As much as we hate to say it, the commies must help us."
+ MLW_FOPOL_SAF.3.O4: "Poachers hurt us all."
+ MLW_FOPOL_SAF.3.O5: "Poachers hurt us all."
+ MLW_FOPOL_SAF.3.Y1: "The poachers will be brought to justice."
+ MLW_FOPOL_SAF.3.N1: "Poachers? What about poaching profits?"
+
+ MLW_FOPOL_SAF.30.t: "[SAF.GetName] Signs Anti-Poaching Declaration"
+ MLW_FOPOL_SAF.30.d: "" # fix
+ MLW_FOPOL_SAF.30.O1: "The poachers will regret coming here."
+
+ MLW_FOPOL_SAF.31.t: "[SAF.GetName] Refuses To Help Combat Poaching"
+ MLW_FOPOL_SAF.31.d: "" # fix
+ MLW_FOPOL_SAF.31.O1: "We will have to go it alone."
 
 
 
+ MLW_FOPOL_SAF.4.t1: "Founding of the PAFF Pact"
+ MLW_FOPOL_SAF.4.d1: "" # fix
 
+ MLW_FOPOL_SAF.4.t2: "Founding of the PAFLM Pact"
+ MLW_FOPOL_SAF.4.d2: "" # fix
 
+ MLW_FOPOL_SAF.4.t3: "Founding of the ALPAFF Pact"
+ MLW_FOPOL_SAF.4.d3: "" # fix
 
+ MLW_FOPOL_SAF.4.t4: "Founding of the PAFF Pact"
+ MLW_FOPOL_SAF.4.d4: "" # fix
 
+ MLW_FOPOL_SAF.4.t5: "Founding of the PAFF Pact"
+ MLW_FOPOL_SAF.4.d5: "" # fix
 
+ MLW_FOPOL_SAF.4.O1: "The first steps towards true African unity."
+ MLW_FOPOL_SAF.4.O2: "The paramilitaries must be integrated"
+ MLW_FOPOL_SAF.4.O3: "We would rather become a colony again."
+ MLW_FOPOL_SAF.4.O4: "We will work with them until they show their hand."
+ MLW_FOPOL_SAF.4.O5: "United against sanctions!"
+ MLW_FOPOL_SAF.4.Y1: "Of course, who else will sign on?"
+ MLW_FOPOL_SAF.4.N1: "They have an army now? Where's the rest of it?"
+
+ MLW_FOPOL_SAF.40.t: "[SAF.GetName] Signs On To PAFF Pact"
+ MLW_FOPOL_SAF.40.d: "" # fix
+ MLW_FOPOL_SAF.40.O1: "One step closer to a united African army."
+
+ MLW_FOPOL_SAF.41.t: "[SAF.GetName] Refuses To Sign PAFF Pact"
+ MLW_FOPOL_SAF.41.d: "" # fix
+ MLW_FOPOL_SAF.41.O1: "But Africa is in their name!"
 
 
 
  MLW_FOPOL_SAF.5.t: "Malawi Offers State Apology for Kamuzu Banda"
  MLW_FOPOL_SAF.5.d: "Today the Malawian government issued a communiqué that emphasised the \"importance of reconciliation and co-operation within the continent\". The official state sanctioned release also admitted for the first time the misdeeds and crimes of the former dictator and first president of Malawi; Hastings Kamuzu Banda.\n\nBanda was most well known for maintaining his iron grip over the people of Malawi and his fearsome Young Pioneer paramilitary force, unfortunately, he also aided other leaders within the continent to maintain their own form of iron grip over their respective nations, South Africa among them. During the years of Apartheid, Banda's Malawi along with several other nations, allowed South Africa to skirt sanctions at great detriment to South Africa's black populace."
  MLW_FOPOL_SAF.5.O1: "A new millennium for a new relationship."
+
+
 
  MLW_FOPOL_SAF.6.t: "Malawians Seek Out Low Skilled Labour in South Africa"
  MLW_FOPOL_SAF.6.d: "With many jobs left without workers to fill them due to the comparatively low wages on offer, it may be a surprise for many to hear that those jobs are scheduled to be filled in relatively short stead. But for the Malawian men and women getting off of planes, trains and buses, those low wages here in South Africa may as well be a dream come true for those who come from the \"Warm Heart of Africa\" who hope to send most of the Rand that they earn back north.\n\nSome people are however concerned about the nature of this arrangement and even suspect that the low wage jobs won't be the last to be given to the Malawian hopefuls."
@@ -79,9 +165,41 @@
  MLW_FOPOL_SAF.60.d: "Whilst our people were eager to fill vacancies that no one in the rainbow nation wanted to take up, it appears as though their government are less enthused at the concept and have hastily written up a law that almost flew through the parliament. If our hardy workers wish to work in South Africa, they have to fulfil certain quotas, quotas we almost certainly do not fit into neatly.\n\nWe have but 2 options, either we enforce the permit scheme up here in Malawi in order to appease the South Africans, or we can reach out to certain contacts that may allow our more morally bankrupt or desperate people to work these jobs in exchange for special favours to, or even within, these organisations..."
  MLW_FOPOL_SAF.60.O1: "Our people will suffer without adequate opportunities!"
 
+
+
  MLW_FOPOL_SAF.7.t: "Malawians Flooding [THIS.GetAdjective] Job Market!"
  MLW_FOPOL_SAF.7.d: "In a recent exposé, undercover journalists infiltrated an illegal workshop in downtown Johannesburg, what was found was hordes of undocumented Malawian workers all collaborating in order to keep wages low enough to make sure South Africans would not work them but high enough that they could send the money back to their families in Malawi.\n\nThat's if you believe the story they tell however, as many, if not the majority of those found in the Johannesburg workshop were found to have ties to nefarious actors spread out all across our great nation, if the suspected ties to the Malawian government are true, they may just have a lot to answer for."
  MLW_FOPOL_SAF.7.O1: "They're bringing drugs, they're bring crime..."
+
+
+
+ MLW_FOPOL_SAF.8.t1: "Malawian Government Seeks High Skill Visa Agreement"
+ MLW_FOPOL_SAF.8.d1: "" # fix
+
+ MLW_FOPOL_SAF.8.t2: "Draining [SAF.GetName] of Black Brains"
+ MLW_FOPOL_SAF.8.d2: "" # fix
+
+ MLW_FOPOL_SAF.8.t3: "Refugees of Communism Visas"
+ MLW_FOPOL_SAF.8.d3: "" # fix
+
+ MLW_FOPOL_SAF.8.t4: "Educated Minds are Dangerous Futures"
+ MLW_FOPOL_SAF.8.d4: "" # fix
+
+ MLW_FOPOL_SAF.8.t5: "Shared Resources Against Sanctions"
+ MLW_FOPOL_SAF.8.d5: "" # fix
+
+ MLW_FOPOL_SAF.8.Y1: "A visa agreement will benefit us all."
+ MLW_FOPOL_SAF.8.N1: "This will only be used one way, no chance!"
+
+ MLW_FOPOL_SAF.80.t: "[SAF.GetName] Signs Visa Agreement"
+ MLW_FOPOL_SAF.80.d: "" # fix
+ MLW_FOPOL_SAF.80.O1: "On both sides, our people will benefit."
+
+ MLW_FOPOL_SAF.81.t: "[SAF.GetName] Refuses Visa Agreement"
+ MLW_FOPOL_SAF.81.d: "" # fix
+ MLW_FOPOL_SAF.81.O1: "Perhaps they will see reason in the future."
+
+
 
 
 
@@ -128,11 +246,11 @@
  # MLW_SAF_pan_african_army: "Pan-African Fighting Force"
  # MLW_SAF_pan_african_army_desc: ""
 
- # MLW_SAF_make_amends: "Making Amends from Banda's Reign"
- # MLW_SAF_make_amends_desc: ""
+ MLW_SAF_make_amends: "Making Amends from Banda's Reign"
+ MLW_SAF_make_amends_desc: ""
 
- # MLW_SAF_deepen_brotherhood: "Deepen African Brotherhood"
- # MLW_SAF_deepen_brotherhood_desc: ""
+ MLW_SAF_deepen_brotherhood: "Deepen African Brotherhood"
+ MLW_SAF_deepen_brotherhood_desc: ""
 
  # MLW_SAF_work_in_SA: "Send Workers to South Africa"
  # MLW_SAF_work_in_SA_desc: ""
@@ -316,8 +434,8 @@
  MLW_USA_USAID: "Request USAID"
  MLW_USA_USAID_desc: ""
 
- # MLW_USA_imports: "Ramp Up Imports"
- # MLW_USA_imports_desc: ""
+ MLW_USA_imports: "Ramp Up Imports"
+ MLW_USA_imports_desc: ""
 
 
 
@@ -365,11 +483,11 @@
  MLW_prc_building_materials: "PRC Building Materials"
  MLW_prc_building_materials_desc: ""
 
- # MLW_ally_with_prc: "Allying with the PRC"
- # MLW_ally_with_prc_desc: ""
+ MLW_ally_with_prc: "Allying with the PRC"
+ MLW_ally_with_prc_desc: ""
 
- # MLW_no_taiwan: "Refuse to Acknowledge Taiwan"
- # MLW_no_taiwan_desc: ""
+ MLW_no_taiwan: "Refuse to Acknowledge Taiwan"
+ MLW_no_taiwan_desc: ""
 
  # TAIWAN
  MLW_taiwan_buddies: "Maintaining Ties to Taiwan"
@@ -378,31 +496,31 @@
  MLW_taiwan_electronics: "Import Taiwanese Electronics"
  MLW_taiwan_electronics_desc: ""
 
- # MLW_taiwan_mzuzu_parts: "Obtain Parts for Mzuzu Motors"
- # MLW_taiwan_mzuzu_parts_desc: ""
+ MLW_taiwan_mzuzu_parts: "Obtain Parts for Mzuzu Motors"
+ MLW_taiwan_mzuzu_parts_desc: ""
 
- # MLW_ally_with_taiwan: "Allying with Taiwan"
- # MLW_ally_with_taiwan_desc: ""
+ MLW_ally_with_taiwan: "Allying with Taiwan"
+ MLW_ally_with_taiwan_desc: ""
 
- # MLW_no_prc: "Refuse to Acknowledge PRC"
- # MLW_no_prc_desc: ""
+ MLW_no_prc: "Refuse to Acknowledge PRC"
+ MLW_no_prc_desc: ""
 
  # BRIDGING THE GAP
- # MLW_bridging_the_gap: "Bridging the Gap"
- # MLW_bridging_the_gap_desc: ""
+ MLW_bridging_the_gap: "Bridging the Gap"
+ MLW_bridging_the_gap_desc: ""
 
  # JAPAN
  MLW_japan: "Japan"
  MLW_japan_desc: ""
 
- # MLW_importing_toyotas: "Importing Toyotas"
- # MLW_importing_toyotas_desc: ""
+ MLW_importing_toyotas: "Importing Toyotas"
+ MLW_importing_toyotas_desc: ""
 
- # MLW_japanese_construction_vehicles: "Buying Up Kubotas"
- # MLW_japanese_construction_vehicles_desc: ""
+ MLW_japanese_construction_vehicles: "Buying Up Kubotas"
+ MLW_japanese_construction_vehicles_desc: ""
 
- # MLW_toyota_offices: "Toyota's Malawi Office"
- # MLW_toyota_offices_desc: ""
+ MLW_toyota_offices: "Toyota's Malawi Office"
+ MLW_toyota_offices_desc: ""
 
 
 
@@ -420,8 +538,8 @@
  MLW_gcc_megaprojects: "Megaprojects in the Gulf"
  MLW_gcc_megaprojects_desc: ""
 
- # MLW_gcc_deepen_relations: "Deepen Relations in the Gulf"
- # MLW_gcc_deepen_relations_desc: ""
+ MLW_gcc_deepen_relations: "Deepen Relations in the Gulf"
+ MLW_gcc_deepen_relations_desc: ""
 
  # MLW_gcc_constructors: "MSCC Gulf Office"
  # MLW_gcc_constructors_desc: ""
@@ -447,7 +565,8 @@
 
 
 
-
+ # TRIGGER TOOLTIPS
+ MLW_mzuzu_motors_exists_TT: "§YMzuzu Motors§! has been founded"
 
 
 
@@ -458,9 +577,23 @@
 
 
  # FOCUS TOOLTIPS
+ MLW_SAF_relations_TT: "Will add the §Y$MLW_SAF_DM$§! dynamic modifier, which is used to show relations between §YSouth Africa§! and §YMalawi§!"
+
+
+
+
+
+
  MLW_the_arab_world_TT: "Will add the §Y$MLW_GCC_DM$§! dynamic modifier, which is used to show the deepening relations between the §YGulf§! nations and §YMalawi§!"
  MLW_gcc_megaprojects_TT: "Earnings per construction team hired will vary depending on §Ycorruption level§!, the lower the level of corruption, the more money will make its way to the treasury unimpeded."
-
+ MLW_lose_bonuses_prefix: "We will §Rlose§! any trade or diplomatic bonuses with "
+ MLW_maintain_bonuses_prefix: "Any trade bonuses from "
+ MLW_maintain_bonuses_suffix: " are §Gdoubled§!"
+ MLW_lose_bonuses_CHI_TT: "$MLW_lose_bonuses_prefix$§H[CHI.GetNameWithFlag]§!§R!§!"
+ MLW_lose_bonuses_TAI_TT: "$MLW_lose_bonuses_prefix$§H[TAI.GetNameWithFlag]§!"
+ MLW_maintain_bonuses_CHI_TT: "$MLW_maintain_bonuses_prefix$§H[CHI.GetNameWithFlag]§!$MLW_maintain_bonuses_suffix$"
+ MLW_maintain_bonuses_TAI_TT: "$MLW_maintain_bonuses_prefix$§H[TAI.GetNameWithFlag]§!$MLW_maintain_bonuses_suffix$"
+ MLW_maintain_bonuses_BOTH_TT: "$MLW_maintain_bonuses_prefix$§H[CHI.GetNameWithFlag]§! and §H[TAI.GetNameWithFlag]§! are increased by §G50%§!"
 
  # GCC EFFECT TOOLTIPS
  MLW_GCC_power_plant_fuel_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$fossil_pp_fuel_consumption_modifier$§! by [?DM_fossil_fuel_fuel_use_change|%-2] (Current: [?MLW_gcc_power_plant_fuel|%Y2])"
