--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2719,7 +2719,7 @@
  GER_1_right_side_range: "Light Demilitarization"
  GER_right_side_range: "Anti Militarist Stance"
  GER_middle_right_side_range: "Strong Anti Militarism"
- GER_far_right_side_range: "Suppressing Militaristst"
+ GER_far_right_side_range: "Suppressing Militarists"
  GER_Anti_Militarism: "Anti Militarism"
  GER_Militarism: "Absolute Militarism"
  GER_crack_down_on_radicals: "Expose Radical Personnel"
