--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1097,7 +1097,7 @@
  TUR_domestic_politics_category: "Turkish Domestic Politics"
  TUR_economy_category: "Economic Crisis"
  TUR_pkk_insurgency_category: "Phase I: Trouble in Kurdistan"
- TUR_pkk_insurgency_category_desc: "\n£TUR_desctext_PKK\n\n\n\n\nThe £TUR_Neutral_Communism  §HPKK§! first began their attacks in the late 70's, and ever since, have persisted in their efforts of gaining autonomy or out-right independence from our nation. The £TUR_Neutral_Communism  §YPKK§! have spread their movement to neighboring states, destabilizing our neighbors, and creating a need for closer cooperation.\n\nWe have multiple ways of approaching the conflict. We can either continue to fight the £TUR_Neutral_Communism  §YPKK§! on our own territory, and cooperate with our neighbors to combat them and their affiliates, or we can mediate peace talks and grant them their autonomy.\n\n£TUR_Neutral_Communism  §YPKK Strength§! represents the ability for the £TUR_Neutral_Communism  §YPKK Strength§! to conduct attacks against us, our neighbors, and defend itself. If £TUR_Neutral_Communism  §YPKK Strength§! reaches 100%, the conflict will enter Phase II which will result in the loss of our Kurdish territories, and border conflicts with £TUR_Neutral_Communism  §YPKK§! controlled territory!\n\nCurrent £TUR_Neutral_Communism  §YPKK Strength§!: 25%"
+ TUR_pkk_insurgency_category_desc: "\n£TUR_desctext_PKK\n\n\n\n\nThe £TUR_Neutral_Communism  §HPKK§! first began their attacks in the late 70's, and ever since, have persisted in their efforts of gaining autonomy or out-right independence from our nation. The £TUR_Neutral_Communism  §YPKK§! have spread their movement to neighboring states, destabilizing our neighbors, and creating a need for closer cooperation.\n\nWe have multiple ways of approaching the conflict. We can either continue to fight the £TUR_Neutral_Communism  §YPKK§! on our own territory, and cooperate with our neighbors to combat them and their affiliates, or we can mediate peace talks and grant them their autonomy.\n\n£TUR_Neutral_Communism  §YPKK Strength§! represents the ability for the £TUR_Neutral_Communism  §YPKK Strength§! to conduct attacks against us, our neighbors, and defend itself. If £TUR_Neutral_Communism  §YPKK Strength§! reaches 100%, the conflict will enter Phase II which will result in the loss of our Kurdish territories, and border conflicts with £TUR_Neutral_Communism  §YPKK§! controlled territory!\n\n£TUR_Neutral_Communism  §RPKK Strength§!: §H[?TUR_PKK_strength]%§!"
  TUR_mafia_category: "The Turkish Mafia"
  TUR_mafia_category_desc: "The Turkish Mafia has been active for quite sometime, committing crimes such as drug dealings, murders, fraud, you name it. In recent years however, they have begun becoming more and more political, and certain parties have been caught making deals with them, and slowly giving them more legitimacy.\n\n §YMafia Influence§! measures the overall influence §Hthe Mafia§! has in the nation. If their influence is  §H60§! or higher, then they will be capable of carrying out political assasinations, either towards the leadership of our internal factions, or the military. §Hthe Mafia§! will also cause us to lose money, and lot's of it too, as the higher influence allows more people to be able to commit fraud and tax related crimes. Additionally, §HMafia Influence§! will §Rincrease every two weeks by 1§! if their influence reaches §H60§!. This can happen if we neglect certain events, or if we make poor choices when it comes to dealing with §Hthe Mafia§!. We can combat §HMafia Influence§! by raiding their safe houses, increasing our police spending, or even maintaining party popularity so that our people aren't affected by their campaigns. Additionally, if we get §HMafia Influence§! Below §H30§!, we will be able to make arrests of wanted §HMafia§! criminals, eventually allowing us to completely eradicate §Hthe Mafia§!.\n\n§HMafia Influence§!: §R[?TUR.TUR_mafia_influence]§!"
  TUR_conduct_anti_mafia_raid: "Conduct Anti-Mafia Operations"
@@ -1659,25 +1659,11 @@
  Turkish_Economy.555.desc: "It appears that Greece does not want any Turkish companies operating in their land, so we will have to stand back for now."
  Turkish_Economy.555.a: "What's new?"
  #PKK Events
- TUR_pkk.1.t: "Operation against the PKK"
- TUR_pkk.1.d: "It is becoming increasingly clear that we cannot subdue the Kurd's with dialogue, so therefore it leaves us with no choice but to conduct military operations in our Kurdish regions in order to maintain control and stability. The likely-hood of success is determined by the option we pick, if are to succeed then the PKK's strength will falter, but if we fail then they will be impowered."
- TUR_pkk.1.a: "A calculated and well planned Operation"
- TUR_pkk.1.b: "A calculated operation"
- TUR_pkk.1.c: "No need for plans, go in!"
- TUR_pkk.2.t: "Operation Successful"
- TUR_pkk.2.d: "We were able to successfully subdue the PKK during our latest operation. Their forces have retreated high into the mountains, and will most likely initiate more attacks once they are ready, however for now, we can rest."
- TUR_pkk.2.a: "Mission well done"
- TUR_pkk.3.t: "Operation Failed"
- TUR_pkk.3.d: "It seems that our forces were not quite ready to move into the Kurdish regions and tame the PKK, so we had to fall back. This has given the PKK more motivation to keep on fighting after seeing the Turkish soldiers flee the battle."
- TUR_pkk.3.a: "There is always tomorrow.."
- TUR_pkk.4.t: "PKK Insurgency"
- TUR_pkk.4.d: "The PKK has declared a state of their own in eastern Turkey, and are willing to fight to the end for it. This comes because of our failures to maintain and control the PKK, so we will now have to deal with them through war if we wish to take back those states. We can also stand down in order to relieve the burden of Kurdish problems, and let them be on their own as they wish."
- TUR_pkk.4.a: "No! We will fight"
- TUR_pkk.4.b: "Let them be.."
- TUR_pkk.5.t: "PKK launch attack"
- TUR_pkk.5.d: "The PKK has launched an attack on our units stationed in the Kurdistan region in an attempt to push them out. This has increased their strength, and if it keeps up, then the PKK will eventually break off!"
- TUR_pkk.5.a: "Damn"
- TUR_pkk.5.b: "Launch a counter-attack"
+ TUR_pkk.1.t: "Diyarbakir Summit"
+ TUR_pkk.1.d: "The Diyarbakir Summit will commence as early as this week, however, we still have not made up our mind on how we will approach the £TUR_Neutral_Communism  PKK. We could carry on with the planned, and more popular choice of cooperating with our allies on combatting the £TUR_Neutral_Communism  PKK, which would be more costly at the end of the day but will yield the greatest results and will be more efficient than any other proposed plan. We could also cut back on the costs, and take the £TUR_Neutral_Communism  PKK on our own. This would anger our neighbors, potentially even leading to confrontation, but this will allow us to expel the £TUR_Neutral_Communism  PKK from our lands, but will leave their splinter groups active within our neighbors. We could also take the more radical stance, and announce or intention to grant the Kurds autonomy. This would certainly anger our neighbors, as it would put them under greater pressure to grant autonomy to their own Kurds."
+ TUR_pkk.1.a: ""
+ TUR_pkk.1.b: ""
+ TUR_pkk.1.c: ""
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
  Turkey.1.a: "We don't need him"
