--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -2870,7 +2870,7 @@
  SOO.Conservative_sov: "£SOV_emerging_reactionary United Russia"
  SOO.Conservative_sov_icon: "£SOV_emerging_reactionary"
  SOO.anarchist_communism: "£SOO_anarchist_communism Nykhaz"
- SOO.anarchist_communism_icon: "£SOO_anarchist_communism_small"
+ SOO.anarchist_communism_icon: "£SOO_anarchist_communism"
  SOO.anarchist_communism_sov: "£SOV_left_wing_radical_1 A Just Russia"
  SOO.anarchist_communism_sov_icon: "£SOV_left_wing_radical_1"
  SOO.anarchist_communism_desc: "Nykhaz is a political party in South Ossetia founded by supporters of Independent president Leonid Tibilov."
