--- a/Changelog.txt
+++ b/Changelog.txt
@@ -40,6 +40,7 @@ v1.10.5
   - Fixed Bonsnian army spirit providing 10 recovery rate instead on 0.1
   - Fixed the Canadian history file giving you tech to non-BBA planes despite having the DLC
   - If you leave NATO you should now lose the NATO Nuclear Sharing Group idea
+  - Fixed an issue with a national spirit not being removed for Indonesia
 
  Graphics:
   - Reworked most of the decision menu pictures
