Created PUK tag & split Kurdistan

--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -214,6 +214,7 @@
  TUR_minority_government: "Minority Government"
  TUR_minority_government_desc: "Our government currently doesn't hold a majority of the parliament seats, making decision making very difficult"
  #Tooltips
+ TUR_PKK_TT: "£decision_icon_small §YUnlocks§! Additional §YDecisions§! for Phase I: Trouble in Kurdistan"
  TUR_ottomans_time: "We can bring the §HHouse of Osman§! into power, and the focus tree will be made available."
  TUR_mafia_increase_1: "§HMafia influence§! §Rincreases by 1§!"
  TUR_mafia_increase_2: "§HMafia influence§! §Rincreases by 2§!"
@@ -1661,9 +1662,9 @@
  #PKK Events
  TUR_pkk.1.t: "Diyarbakir Summit"
  TUR_pkk.1.d: "The Diyarbakir Summit will commence as early as this week, however, we still have not made up our mind on how we will approach the £TUR_Neutral_Communism  PKK. We could carry on with the planned, and more popular choice of cooperating with our allies on combatting the £TUR_Neutral_Communism  PKK, which would be more costly at the end of the day but will yield the greatest results and will be more efficient than any other proposed plan. We could also cut back on the costs, and take the £TUR_Neutral_Communism  PKK on our own. This would anger our neighbors, potentially even leading to confrontation, but this will allow us to expel the £TUR_Neutral_Communism  PKK from our lands, but will leave their splinter groups active within our neighbors. We could also take the more radical stance, and announce or intention to grant the Kurds autonomy. This would certainly anger our neighbors, as it would put them under greater pressure to grant autonomy to their own Kurds."
- TUR_pkk.1.a: ""
- TUR_pkk.1.b: ""
- TUR_pkk.1.c: ""
+ TUR_pkk.1.a: "Cooperation with our neighbors will defeat the terrorists!"
+ TUR_pkk.1.b: "We don't need help, we will take out the PKK on our own!"
+ TUR_pkk.1.c: "Perhaps we have been too harsh on the Kurds..."
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
  Turkey.1.a: "We don't need him"
