--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -1025,3 +1025,7 @@
 
  SUD_humiliated_army: "Humiliated Army"
  SUD_humiliated_army_desc: "The recent raid by Darfuri rebels at El Fasher has been a major hit military and psychologically to the Sudanese Army. A much smaller group of rebels managed to destroy several aircraft, kill multiple soldiers and capture a major general who was a commander of an air base. It will take time before the army can recover from this."
+
+# Kurdish ones (putting here for now until fleshed out Kurdish content)
+ KUR_barzani_tribe: "Barzani Leadership"
+ KUR_barzani_tribe_desc: "The Barzani tribe has for the longest time, held a firm grip over the Kurdish region north of Iraq."
