--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -1028,4 +1028,6 @@
 
 # Kurdish ones (putting here for now until fleshed out Kurdish content)
  KUR_barzani_tribe: "Barzani Leadership"
- KUR_barzani_tribe_desc: "The Barzani tribe has for the longest time, held a firm grip over the Kurdish region north of Iraq."
+ KUR_barzani_tribe_desc: "Coming from a Sufi, Yezidi background, and originating from Barzan in Northern Kurdistan, the Barzani tribe has for the longest time, held a firm grip over the Kurdish region north of Iraq. This influence has allowed them to play a major role in Iraqi and Kurdish politics over time, often times swaying it one way or another.\n§W--------------§!\nThis National Spirit will be §RRemoved§! if the £KUR_conservatism_small KDP is not in power."
+ PUK_battle_hardened: "Battle Hardened"
+ PUK_battle_hardened_desc: "The PUK played a crucial role in the Iran-Iraq war, having inflicted lots of damage on Saddam's army. This experience allowed our command, and troops to gain invaluable experience on the battlefield.\n§W--------------§!\nThis National Spirit will be §RRemoved§! if the £KUR_Autocracy_small PUK is not in power."
