--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -382,7 +382,7 @@
  MODIFIER_SPREAD_OUT_FACTOR: "£formation_spread_texticon  Fleet Spread"
  MODIFIER_SPREAD_OUT: "£formation_spread_texticon  Fleet Spread"
  MODIFIER_SHIPS_AT_BATTLE_START_FACTOR: "£ships_contact_texticon  Number of ships in the first contact"
- MODIFIER_DISENGAGE_TIMER_FACTOR: "£ships_contact_texticon  Disengage time"
+ MODIFIER_DISENGAGE_TIMER_FACTOR: "£ships_contact_texticon  Disengage Time"
  MODIFIER_DISENGAGE_TIMER: "£ships_contact_texticon  Disengage Time"
  MODIFIER_NAVAL_RETREAT_CHANCE: "£retreat_texticon  Retreat Decision Chance"
  MODIFIER_NAVAL_RETREAT_SPEED: "£retreat_texticon  Fleet speed while retreating"
