--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -30,7 +30,7 @@
  modifier_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed"
  modifier_production_speed_synthetic_refinery_factor_desc: "Modifies the speed of $synthetic_refinery$ construction."
  modifier_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§! construction speed"
- modifier_production_speed_rocket_site_factor: "£construction_speed_texticon §Y$anti_air_building$§! construction speed"
+ modifier_production_speed_rocket_site_factor: "£construction_speed_texticon §Y$rocket_site$§! construction speed"
  modifier_production_speed_rocket_site_factor_desc: "Modifies the speed of Anti-Air Battery Site construction."
  modifier_production_speed_internet_station_factor: "£construction_speed_texticon §Y$internet_station$§! construction speed"
  communism_drift: "£emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support"
@@ -578,7 +578,7 @@
  MODIFIER_NAVAL_STRIKE_TARGETTING_NIGHT: "£naval_strike_targetting_night_texticon  Night naval strike targeting"
  MODIFIER_NAVAL_STRIKE_TARGETTING_NIGHT_FACTOR: "£naval_strike_targetting_night_texticon  Night naval strike targeting"
  MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT: "£speed_destroyer_night_texticon  Night naval strike agility during"
- MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT_FACTOR: "£speed_destroyer_night_texticon  Night naval strike agility"
+ MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT_FACTOR: "£speed_destroyer_night_texticon  Night naval strike agility during"
  MODIFIER_AIR_RANGE_NIGHT: "£air_range_night_texticon  Night air range"
  MODIFIER_AIR_RANGE_NIGHT_FACTOR: "£air_range_night_texticon  Night air range"
  MODIFIER_AIR_RANGE_NIGHT_DESC: "Air range during night."
@@ -628,37 +628,37 @@
  MODIFIER_OPINION_GAIN_MONTHLY_SAME_IDEOLOGY_FACTOR_DESC: "Monthly opinion change if same ideology."
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR: "£production_efficiency_loss_texticon  Production Efficiency Retention"
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR_DESC: "Change in Production Efficiency loss when changing what a Production Line produces."
- MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon  §YInfrastructure§! construction speed"
+ MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon  §Y$infrastructure$§! construction speed"
  MODIFIER_production_speed_infrastructure_factor_desc: "Modifies the speed of Infrastructure construction."
- MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon  §YMilitary Factory§! construction speed"
+ MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon  §Y$arms_factory$§! construction speed"
  MODIFIER_production_speed_arms_factory_factor_desc: "Modifies the speed of Military Factory construction."
- MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon  §YCivilian Factory§! construction speed"
+ MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon  §Y$industrial_complex$§! construction speed"
  MODIFIER_production_speed_industrial_complex_factor_desc: "Modifies the speed of Civilian Factory."
- MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon  §YAir Base§! construction speed"
+ MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon  §Y$air_base$§! construction speed"
  MODIFIER_production_speed_air_base_factor_desc: "Modifies the speed of Air base construction."
- MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon  §YNaval base§! construction speed"
+ MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon  §Y$naval_base$§! construction speed"
  MODIFIER_production_speed_naval_base_factor_desc: "Modifies the speed of Naval base construction."
- MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon  §YLand Fort§! construction speed"
+ MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon  §Y$bunker$§! construction speed"
  MODIFIER_production_speed_bunker_factor_desc: "Modifies the speed of Bunker construction."
- MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon  §YCoastal Fort§! construction speed"
+ MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon  §Y$coastal_bunker$§! construction speed"
  MODIFIER_production_speed_coastal_bunker_factor_desc: "Modifies the speed of Coastal bunker construction."
- MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon  §YDockyard§! construction speed"
+ MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon  §Y$dockyard$§! construction speed"
  MODIFIER_production_speed_dockyard_factor_desc: "Modifies the speed of Dockyard construction."
- MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon  §YAnti Air§! construction speed"
+ MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon  §Y$anti_air_building$§! construction speed"
  MODIFIER_production_speed_anti_air_building_factor_desc: "Modifies the speed of Anti air construction."
- MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  §YRefinery§! construction speed"
+ MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  §Y$synthetic_refinery$§! construction speed"
  MODIFIER_production_speed_synthetic_refinery_factor_desc: "Modifies the speed of Synthetic construction."
- MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon  §YRadar Station§! construction speed"
+ MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon  §Y$radar_station$§! construction speed"
  MODIFIER_production_speed_radar_station_factor_desc: "Modifies the speed of Radar Station construction."
- MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon  §YRocket Site§! construction speed"
+ MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon  §Y$rocket_site$§! construction speed"
  MODIFIER_production_speed_rocket_site_factor_desc: "Modifies the speed of Rocket Site construction."
- MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon  §YNuclear Reactor§! construction speed"
+ MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon  §Y$nuclear_reactor$§! construction speed"
  MODIFIER_production_speed_nuclear_reactor_factor_desc: "Modifies the speed of Nuclear Reactor construction speed"
- MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon  §YFuel Silo§! construction speed"
+ MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon  §Y$fuel_silo$§! construction speed"
  MODIFIER_production_speed_fuel_silo_factor_desc: "Modifies the speed of Fuel Silo construction."
- MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  §YRailway§! construction speed"
+ MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  §Y$rail_way$§! construction speed"
  MODIFIER_production_speed_rail_way_factor_desc: "Modifies the speed of Railway construction."
- MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon  §YSupply Hub§! construction speed"
+ MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon  §Y$supply_node$§! construction speed"
  MODIFIER_production_speed_supply_node_factor_desc: "Modifies the speed of Supply Hub construction."
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY: "£prod_eff_cap  Production Efficiency Cap"
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_DESC: "Production Efficiency Cap that can be reached by mass-producing items in a single Production Line."
@@ -1287,21 +1287,21 @@
  resource_sabotage_decrease_tooltip_UNCHANGED: "  £sabotaged_resource_texticon  Resource Sabotage Chance: §G-25%§! (§H+0%§!)\n  £sabotaged_resource_texticon  Resource Sabotage Duration: §G-25%§! (§H+0%§!)"
  factory_sabotage_decrease_tooltip_UNCHANGED: "  £civ_factory_sabotage  Civilian Factory Sabotage Chance: §G-25%§! (§H+0%§!)\n  £mil_factory_sabotage  Military Factory Sabotage Chance: §G-25%§! (§H+0%§!)"
 
- modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon  §YInfrastructure§! Repair Speed"
- modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon  §YCivilian Factory§! Repair Speed"
- modifier_repair_speed_arms_factory_factor: "£repair_mil_factory_texticon  §YMilitary Factory§! Repair Speed"
- modifier_repair_speed_rail_way_factor: "£repair_infrastructure_texticon  §YRailway§! Repair Speed"
- modifier_repair_speed_dockyard_factor: "£repair_civ_factory_texticon  §YDockyard§! Repair Speed"
- modifier_repair_speed_air_base_factor: "£repair_infrastructure_texticon  §YAir Base§! Repair Speed"
- modifier_repair_speed_naval_base_factor: "£repair_infrastructure_texticon  §YNaval Base§! Repair Speed"
+ modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon  §Y$infrastructure$§! Repair Speed"
+ modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon  §Y$industrial_complex$§! Repair Speed"
+ modifier_repair_speed_arms_factory_factor: "£repair_mil_factory_texticon  §Y$arms_factory$§! Repair Speed"
+ modifier_repair_speed_rail_way_factor: "£repair_infrastructure_texticon  §Y$rail_way$§! Repair Speed"
+ modifier_repair_speed_dockyard_factor: "£repair_civ_factory_texticon  §Y$dockyard$§! Repair Speed"
+ modifier_repair_speed_air_base_factor: "£repair_infrastructure_texticon  §Y$air_base$§! Repair Speed"
+ modifier_repair_speed_naval_base_factor: "£repair_infrastructure_texticon  §Y$naval_base$§! Repair Speed"
 
- modifier_production_cost_infrastructure_factor: "£construction_speed_infrastructure_texticon §YInfrastructure§! Production Cost"
- modifier_production_cost_industrial_complex_factor: "£construction_speed_civfactory_texticon  §YCivilian Factory§! Production Cost"
- modifier_production_cost_arms_factory_factor: "£construction_speed_milfactory_texticon  §YMilitary Factory§! Production Cost"
- modifier_production_cost_rail_way_factor: "£construction_speed_railway_texticon  §YRailway§! Production Cost"
- modifier_production_cost_dockyard_factor: "£construction_speed_dockyard_texticon  §YDockyard§! Production Cost"
- modifier_production_cost_air_base_factor: "£construction_speed_airbase_texticon  §YAir Base§! Production Cost"
- modifier_production_cost_naval_base_factor: "£construction_speed_navalbase_texticon  §YNaval Base§! Production Cost"
+ modifier_production_cost_infrastructure_factor: "£construction_speed_infrastructure_texticon §Y$infrastructure$§! Production Cost"
+ modifier_production_cost_industrial_complex_factor: "£construction_speed_civfactory_texticon  §Y$industrial_complex$§! Production Cost"
+ modifier_production_cost_arms_factory_factor: "£construction_speed_milfactory_texticon  §Y$arms_factory$§! Production Cost"
+ modifier_production_cost_rail_way_factor: "£construction_speed_railway_texticon  §Y$rail_way$§! Production Cost"
+ modifier_production_cost_dockyard_factor: "£construction_speed_dockyard_texticon  §Y$dockyard$§! Production Cost"
+ modifier_production_cost_air_base_factor: "£construction_speed_airbase_texticon  §Y$air_base$§! Production Cost"
+ modifier_production_cost_naval_base_factor: "£construction_speed_navalbase_texticon  §Y$naval_base$§! Production Cost"
 
  MODIFIER_CIVILIAN_INTEL_FACTOR: "£civilian_intel_texticon  Civilian Intelligence"
  MODIFIER_ARMY_INTEL_FACTOR: "£army_intel_texticon  Army Intelligence"
@@ -1952,7 +1952,7 @@
  modifier_experience_gain_L_Air_assault_Bat_combat_factor: "£experience_neutral_combat_texticon Light Air Assault Infantry experience gain from combat"
  modifier_experience_gain_Arm_Air_assault_Bat_combat_factor: "£experience_neutral_combat_texticon Armored Air Assault Infantry experience gain from combat"
  modifier_experience_gain_atk_helo_bat_combat_factor: "£experience_neutral_combat_texticon Attack Helicopter experience gain from combat"
- production_cost_supply_node_factor: "£under_construction_texticon  §YSupply Hub§! construction cost"
+ production_cost_supply_node_factor: "£under_construction_texticon  §Y$supply_node$§! construction cost"
  production_cost_supply_node_factor_desc: "Modifies the cost of Supply Hub construction."
  SUPPLY_PENALTY_ON_CORE: "£supply_consumption_core_texticon  Supply Combat Penalties on Core Territory"
  supply_combat_penalties_on_core_factor: "£supply_consumption_core_texticon  Supply Combat Penalties on Core Territory"
