Minor Adjustments and Fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -54,9 +54,11 @@ v1.10.5
   - Reworked political parties and leaders for Sudan, South Sudan and Darfur
   - New focus for Libya: Support South Sudan
   - Added a failswitch that you won't get Muslim Brotherhood events if the civil war starts
+  - New focus for Indonesia: "Grasberg Mine Exploitation"
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE
+  - Added Precious Metals to Western Papua in Indonesia for the Grasberg Mine
 
  Localization:
   - Fixed an error with Saddams Rage localization not appearing
