--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -6,6 +6,8 @@
  IND_indonesias_future_desc: "As our nation enters the 21st century with all of its problems, we must find ways to tackle them and bring our nation the love it deserves!"
  IND_asia_financial_crisis: "Tackle the Crisis!"
  IND_asia_financial_crisis_desc: "The Financial Crisis has hit South East Asia hard since 1997, and our nation has not been spared of its crippling effects. We are now going to proceed with devising a plan on solving this problem"
+ IND_grasberg_mine_exploitation: "Grasberg Mine Exploitation"
+ IND_grasberg_mine_exploitation_desc: "The Grasberg Mine in Western Papua is one of the largest gold and copper mines in the world. We should expand and exploit the reserves in the area to better bring Indonesia into the market for precious metals."
  IND_japanese_aid: "Call for Japanese Aid"
  IND_japanese_aid_desc: "Despite our differences in the second world war, Japan has been fairly kind to us in our economic troubles. We should contact them and their western allies to help us out this situation"
  IND_japanese_aid_jica: "The JICA"
