--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -26,13 +26,17 @@
  modifier_production_speed_dockyard_factor: "£construction_speed_texticon §Y$dockyard$§! construction speed"
  modifier_production_speed_dockyard_factor_desc: "Modifies the speed of $dockyard$ construction."
  modifier_production_speed_offices_factor: "£construction_speed_texticon §Y$offices$§! construction speed"
+ modifier_production_speed_offices_factor_desc: "Modifies the speed of $offices$ construction."
  modifier_production_speed_anti_air_building_factor: "£construction_speed_texticon §Y$anti_air_building$§! construction speed"
+ modifier_production_speed_anti_air_building_factor_desc: "Modifies the speed of $anti_air_building$ construction."
  modifier_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed"
  modifier_production_speed_synthetic_refinery_factor_desc: "Modifies the speed of $synthetic_refinery$ construction."
  modifier_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§! construction speed"
+ modifier_production_speed_radar_station_factor_desc: "Modifies the speed of $radar_station$ construction."
  modifier_production_speed_rocket_site_factor: "£construction_speed_texticon §Y$rocket_site$§! construction speed"
- modifier_production_speed_rocket_site_factor_desc: "Modifies the speed of Anti-Air Battery Site construction."
+ modifier_production_speed_rocket_site_factor_desc: "Modifies the speed of §Y$rocket_site$§! construction."
  modifier_production_speed_internet_station_factor: "£construction_speed_texticon §Y$internet_station$§! construction speed"
+ modifier_production_speed_internet_station_factor_desc: "Modifies the speed of $internet_station$ construction."
  communism_drift: "£emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support"
  democratic_drift: "£western_outlook_campaign_cost_modifier_texticon Daily Pro-Western Support"
  fascism_drift: "£salafist_outlook_campaign_cost_modifier_texticon Daily Salafist Support"
@@ -629,37 +633,37 @@
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR: "£production_efficiency_loss_texticon  Production Efficiency Retention"
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR_DESC: "Change in Production Efficiency loss when changing what a Production Line produces."
  MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon  §Y$infrastructure$§! construction speed"
- MODIFIER_production_speed_infrastructure_factor_desc: "Modifies the speed of Infrastructure construction."
+ MODIFIER_production_speed_infrastructure_factor_desc: "Modifies the speed of $infrastructure$ construction."
  MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon  §Y$arms_factory$§! construction speed"
- MODIFIER_production_speed_arms_factory_factor_desc: "Modifies the speed of Military Factory construction."
+ MODIFIER_production_speed_arms_factory_factor_desc: "Modifies the speed of $arms_factory$ construction."
  MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon  §Y$industrial_complex$§! construction speed"
- MODIFIER_production_speed_industrial_complex_factor_desc: "Modifies the speed of Civilian Factory."
+ MODIFIER_production_speed_industrial_complex_factor_desc: "Modifies the speed of $industrial_complex$ construction."
  MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon  §Y$air_base$§! construction speed"
- MODIFIER_production_speed_air_base_factor_desc: "Modifies the speed of Air base construction."
+ MODIFIER_production_speed_air_base_factor_desc: "Modifies the speed of $air_base$ construction."
  MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon  §Y$naval_base$§! construction speed"
- MODIFIER_production_speed_naval_base_factor_desc: "Modifies the speed of Naval base construction."
+ MODIFIER_production_speed_naval_base_factor_desc: "Modifies the speed of $naval_base$ construction."
  MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon  §Y$bunker$§! construction speed"
- MODIFIER_production_speed_bunker_factor_desc: "Modifies the speed of Bunker construction."
+ MODIFIER_production_speed_bunker_factor_desc: "Modifies the speed of $bunker$ construction."
  MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon  §Y$coastal_bunker$§! construction speed"
- MODIFIER_production_speed_coastal_bunker_factor_desc: "Modifies the speed of Coastal bunker construction."
+ MODIFIER_production_speed_coastal_bunker_factor_desc: "Modifies the speed of $coastal_bunker$ construction."
  MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon  §Y$dockyard$§! construction speed"
- MODIFIER_production_speed_dockyard_factor_desc: "Modifies the speed of Dockyard construction."
+ MODIFIER_production_speed_dockyard_factor_desc: "Modifies the speed of $dockyard$ construction."
  MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon  §Y$anti_air_building$§! construction speed"
- MODIFIER_production_speed_anti_air_building_factor_desc: "Modifies the speed of Anti air construction."
+ MODIFIER_production_speed_anti_air_building_factor_desc: "Modifies the speed of $anti_air_building$ construction."
  MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  §Y$synthetic_refinery$§! construction speed"
- MODIFIER_production_speed_synthetic_refinery_factor_desc: "Modifies the speed of Synthetic construction."
+ MODIFIER_production_speed_synthetic_refinery_factor_desc: "Modifies the speed of $synthetic_refinery$ construction."
  MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon  §Y$radar_station$§! construction speed"
- MODIFIER_production_speed_radar_station_factor_desc: "Modifies the speed of Radar Station construction."
+ MODIFIER_production_speed_radar_station_factor_desc: "Modifies the speed of $radar_station$ construction."
  MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon  §Y$rocket_site$§! construction speed"
- MODIFIER_production_speed_rocket_site_factor_desc: "Modifies the speed of Rocket Site construction."
+ MODIFIER_production_speed_rocket_site_factor_desc: "Modifies the speed of $rocket_site$ construction."
  MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon  §Y$nuclear_reactor$§! construction speed"
- MODIFIER_production_speed_nuclear_reactor_factor_desc: "Modifies the speed of Nuclear Reactor construction speed"
+ MODIFIER_production_speed_nuclear_reactor_factor_desc: "Modifies the speed of $nuclear_reactor$ construction."
  MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon  §Y$fuel_silo$§! construction speed"
- MODIFIER_production_speed_fuel_silo_factor_desc: "Modifies the speed of Fuel Silo construction."
+ MODIFIER_production_speed_fuel_silo_factor_desc: "Modifies the speed of $fuel_silo$ construction."
  MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  §Y$rail_way$§! construction speed"
- MODIFIER_production_speed_rail_way_factor_desc: "Modifies the speed of Railway construction."
+ MODIFIER_production_speed_rail_way_factor_desc: "Modifies the speed of $rail_way$ construction."
  MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon  §Y$supply_node$§! construction speed"
- MODIFIER_production_speed_supply_node_factor_desc: "Modifies the speed of Supply Hub construction."
+ MODIFIER_production_speed_supply_node_factor_desc: "Modifies the speed of $supply_node$ construction."
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY: "£prod_eff_cap  Production Efficiency Cap"
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_DESC: "Production Efficiency Cap that can be reached by mass-producing items in a single Production Line."
  MODIFIER_PRODUCTION_FACTORY_START_EFFICIENCY_FACTOR: "£efficiency_base_texticon  Production Efficiency Base"
