--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -47,14 +47,14 @@
  fascism_acceptance: "£ai_acceptance_texticon Acceptance of Salafist Diplomacy"
  neutrality_acceptance: "£ai_acceptance_texticon Acceptance of Non-Aligned Diplomacy"
  MODIFIER_ROCKET_ATTACK_FACTOR: "£rocket_modifiericons_texticon Missile Damage"
- MODIFIER_INDUSTRIAL_CAPACITY_FACTOR: "£factory_output_texticon Military Industry Output"
- MODIFIER_INDUSTRIAL_CAPACITY_FACTOR_DESC: "This effectively increases the amount of work each Military Industry can do per hour."
- MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR: "£dockyard_output_texticon Naval Yard Output"
- MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR_DESC: "This effectively increases the amount of work each Naval Yard can do per hour."
+ MODIFIER_INDUSTRIAL_CAPACITY_FACTOR: "£factory_output_texticon $arms_factory$ Output"
+ MODIFIER_INDUSTRIAL_CAPACITY_FACTOR_DESC: "This effectively increases the amount of work each $arms_factory$ can do per hour."
+ MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR: "£dockyard_output_texticon $dockyard$ Output"
+ MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR_DESC: "This effectively increases the amount of work each $dockyard$ can do per hour."
  MODIFIER_INDUSTRY_AIR_DAMAGE_FACTOR: "£factory_bombing_defence_texticon Industry Bomb Vulnerability"
  MODIFIER_INDUSTRY_AIR_DAMAGE_FACTOR_DESC: "Having our industries dispersed makes us take less damaged from enemy bombing."
  MODIFIER_INDUSTRY_REPAIR_FACTOR: "£repair_civ_factory_texticon Industry Repair Speed"
- MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC: "Modifies §HCivilian Factory§! output all repairs."
+ MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC: "Modifies §H$industrial_complex$§! output all repairs."
  MODIFIER_LEND_LEASE_TENSION_LIMIT: "£world_tension_lendlease_texticon Military aid tension limit"
  MODIFIER_SEND_VOLUNTEERS_TENSION_LIMIT: "£world_tension_volunteers_texticon Send intervention force tension limit"
  MODIFIER_SEND_VOLUNTEER_SIZE: "£volunteers_max_texticon Max intervention force divisions"
@@ -747,7 +747,7 @@
  MODIFIER_TECH_AIR_DAMAGE_FACTOR: "£anti_air_gun_texticon  Anti-Air Bombing Damage Reduction"
  MODIFIER_TECH_AIR_DAMAGE_FACTOR_DESC: "Having a technological advantage increases the efficiency of our static anti-air defenses."
  MODIFIER_INDUSTRY_REPAIR_FACTOR: "£repair_civ_factory_texticon  Factory Repair Speed"
- MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC: "Modifies §HCivilian Factory§! output for all repairs."
+ MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC: "Modifies §H$industrial_complex$§! output for all repairs."
  MODIFIER_PRODUCTION_OIL_FACTOR: "£oil_texticon  Synthetic Oil"
  MODIFIER_MAX_TRAINING_XP_FACTOR: "£training_max_texticon  Max training"
  MODIFIER_MIN_EXPORT_FACTOR: "£traded_goods_texticon  Resources to Market"
@@ -1046,7 +1046,7 @@
  MODIFIER_ATTACK_BONUS_AGAINST_A_COUNTRY: " £attack_texticon  Attack bonus against country"
  MODIFIER_ATTACK_BONUS_AGAINST_A_COUNTRY_ON_ITS_CORES: "£attack_core_texticon  Attack on their core territory"
  MODIFIER_DEFENSE_BONUS_AGAINST_A_COUNTRY: " £defence_texticon  Defense bonus against country"
- MODIFIER_CIVILIAN_FACTORY_USE: "£civ_factory  Civilian Factory Use"
+ MODIFIER_CIVILIAN_FACTORY_USE: "£civ_factory  $industrial_complex$ Use"
  MODIFIER_ARMY_LEADER_MAX_ARMY_SIZE: "£divisions_texticon  General Max Army Size"
  MODIFIER_ARMY_GROUP_LEADER_MAX_ARMY_SIZE: "£divisions_texticon  Field Marshal Max Army Size"
  MODIFIER_ARMY_LEADER_MAX_ARMY_GROUP_SIZE: "£divisions_texticon  General Max Army Group Size"
@@ -1146,9 +1146,9 @@
  MODIFIER_BASE_FUEL_GAIN_FACTOR: "£fuel_gain_refinery_texticon  Fuel Gain"
  MODIFIER_BASE_FUEL_GAIN_ADD: "£fuel_gain_refinery_texticon  Fuel Gain"
  MODIFIER_FUEL_COST: "£fuel_cost_texticon  Fuel Cost"
- MODIFIER_INDUSTRIAL_FACTORY_DONATIONS: "£civ_factory  Industrial Factory Donations"
- MODIFIER_MILITARY_FACTORY_DONATIONS: "£mil_factory  Military Factory Donations"
- MODIFIER_DOCKYARD_DONATIONS: "£dockyard_texticon  Dockyard Donations"
+ MODIFIER_INDUSTRIAL_FACTORY_DONATIONS: "£civ_factory  $industrial_complex$ Donations"
+ MODIFIER_MILITARY_FACTORY_DONATIONS: "£mil_factory  $arms_factory$ Donations"
+ MODIFIER_DOCKYARD_DONATIONS: "£dockyard_texticon  $dockyard$ Donations"
  MODIFIER_NAVAL_VISIBILITY_FACTOR: "£spotting_night_texticon  Visibility"
  MODIFIER_NAVAL_CASUALTY_ON_HIT_FACTOR: "£critical_hit_texticon  Casualties factor on hit"
  MODIFIER_NAVAL_CASUALTY_ON_SINK_FACTOR: "£critical_hit_texticon  Casualties on sink"
@@ -1282,14 +1282,14 @@
  ENEMY_SPY_NETWORK_GROWTH: "£spy_network_gain_enemy_texticon  Enemy Spy Network Growth"
  NO_COMPLIANCE_GAIN: "No Compliance Gain"
  resource_sabotage_decrease_tooltip: "  £sabotaged_resource_texticon  Resource Sabotage Chance: §G-25%§!\n  £sabotaged_resource_texticon  Resource Sabotage Duration: §G-25%§!"
- factory_sabotage_decrease_tooltip: "  £civ_factory_sabotage  Civilian Factory Sabotage Chance: §G-25%§!\n  £mil_factory_sabotage  Military Factory Sabotage Chance: §G-25%§!"
+ factory_sabotage_decrease_tooltip: "  £civ_factory_sabotage  $industrial_complex$ Sabotage Chance: §G-25%§!\n  £mil_factory_sabotage  $arms_factory$ Sabotage Chance: §G-25%§!"
  #these are used for comparison
  resource_sabotage_decrease_tooltip_ADDED: "  £sabotaged_resource_texticon  Resource Sabotage Chance: §G-25%§! (§G-25%§!)\n  £sabotaged_resource_texticon  Resource Sabotage Duration: §G-25%§! (§G-25%§!)"
- factory_sabotage_decrease_tooltip_ADDED: "  £civ_factory_sabotage  Civilian Factory Sabotage Chance: §G-25%§! (§G-25%§!)\n  £mil_factory_sabotage  Military Factory Sabotage Chance: §G-25%§! (§G-25%§!)"
+ factory_sabotage_decrease_tooltip_ADDED: "  £civ_factory_sabotage  $industrial_complex$ Sabotage Chance: §G-25%§! (§G-25%§!)\n  £mil_factory_sabotage  $arms_factory$ Sabotage Chance: §G-25%§! (§G-25%§!)"
  resource_sabotage_decrease_tooltip_REMOVED: "  £sabotaged_resource_texticon  Resource Sabotage Chance: §H+0%§! (§R+25%§!)\n  £sabotaged_resource_texticon  Resource Sabotage Duration: §H+0%§! (§R+25%§!)"
- factory_sabotage_decrease_tooltip_REMOVED: "  £civ_factory_sabotage  Civilian Factory Sabotage Chance: §H+0%§! (§R+25%§!)\n  £mil_factory_sabotage  Military Factory Sabotage Chance: §H+0%§! (§R+25%§!)"
+ factory_sabotage_decrease_tooltip_REMOVED: "  £civ_factory_sabotage  $industrial_complex$ Sabotage Chance: §H+0%§! (§R+25%§!)\n  £mil_factory_sabotage  $arms_factory$ Sabotage Chance: §H+0%§! (§R+25%§!)"
  resource_sabotage_decrease_tooltip_UNCHANGED: "  £sabotaged_resource_texticon  Resource Sabotage Chance: §G-25%§! (§H+0%§!)\n  £sabotaged_resource_texticon  Resource Sabotage Duration: §G-25%§! (§H+0%§!)"
- factory_sabotage_decrease_tooltip_UNCHANGED: "  £civ_factory_sabotage  Civilian Factory Sabotage Chance: §G-25%§! (§H+0%§!)\n  £mil_factory_sabotage  Military Factory Sabotage Chance: §G-25%§! (§H+0%§!)"
+ factory_sabotage_decrease_tooltip_UNCHANGED: "  £civ_factory_sabotage  $industrial_complex$ Sabotage Chance: §G-25%§! (§H+0%§!)\n  £mil_factory_sabotage  $arms_factory$ Sabotage Chance: §G-25%§! (§H+0%§!)"
 
  modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon  §Y$infrastructure$§! Repair Speed"
  modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon  §Y$industrial_complex$§! Repair Speed"
@@ -2243,15 +2243,15 @@
  productivity_and_employment_modifier: "Productivity and Employment Combined Effects"
  total_workforce_modifier: "Workforce Size"
  high_unemployment_modifier: "High Unemployment"
- civ_facs_worker_requirement_modifier: "Civilian Factories Required Workforce"
- mil_facs_worker_requirement_modifier: "Military Factories and Dockyards Required Workforce"
- offices_worker_requirement_modifier: "Offices Required Workforce"
+ civ_facs_worker_requirement_modifier: "$industrial_complex$ Required Workforce"
+ mil_facs_worker_requirement_modifier: "$arms_factory$ and $dockyard$ Required Workforce"
+ offices_worker_requirement_modifier: "$offices$ Required Workforce"
  buildings_worker_requirement_cmodifier: "All Buildings Required Workforce"
  productivity_growth_modifier: "Monthly Productivity Growth"
- civilian_factories_productivity: "§YCivilian Factories§! Productivity"
- military_factories_productivity: "§YMilitary Factories§! Productivity"
- dockyard_productivity: "§YDockyards§! Productivity"
- offices_productivity: "§YOffices§! Productivity"
+ civilian_factories_productivity: "§Y$industrial_complex$§! Productivity"
+ military_factories_productivity: "§Y$arms_factory$§! Productivity"
+ dockyard_productivity: "§Y$dockyard$§! Productivity"
+ offices_productivity: "§Y$offices$§! Productivity"
  agricolture_productivity_modifier: "Agriculture Productivity"
  high_unemployment_threshold_modifier: "High Unemployment Threshold"
  resource_sector_workers_modifier: "Workers Needed in Resource Extraction"
