--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -47,8 +47,8 @@
  fascism_acceptance: "£ai_acceptance_texticon Acceptance of Salafist Diplomacy"
  neutrality_acceptance: "£ai_acceptance_texticon Acceptance of Non-Aligned Diplomacy"
  MODIFIER_ROCKET_ATTACK_FACTOR: "£rocket_modifiericons_texticon Missile Damage"
- MODIFIER_INDUSTRIAL_CAPACITY_FACTOR: "£factory_output_texticon $arms_factory$ Output"
- MODIFIER_INDUSTRIAL_CAPACITY_FACTOR_DESC: "This effectively increases the amount of work each $arms_factory$ can do per hour."
+ MODIFIER_INDUSTRIAL_CAPACITY_FACTOR: "£factory_output_texticon $arms_factory$ & $industrial_complex$ Output"
+ MODIFIER_INDUSTRIAL_CAPACITY_FACTOR_DESC: "This effectively increases the amount of work each $arms_factory$ & $industrial_complex$ can do per hour."
  MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR: "£dockyard_output_texticon $dockyard$ Output"
  MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR_DESC: "This effectively increases the amount of work each $dockyard$ can do per hour."
  MODIFIER_INDUSTRY_AIR_DAMAGE_FACTOR: "£factory_bombing_defence_texticon Industry Bomb Vulnerability"
