--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -835,12 +835,12 @@
  ##Ethnic Tensions
  #Back Muslims
  IND_back_muslim: "Backing the Muslims"
- IND_back_muslim_desc: "We are an Islamic nation! Therefore, we must protect our muslims no matter the cost. Doing so, will win us popular support and root out any hatred towards us in Islamic majority Sulewesi\n\n\n\nNegotiating is invaluable and must begin immediately!"
- IND_muslim: "Negotiate terms with Muslims in Sulewesi"
+ IND_back_muslim_desc: "We are an Islamic nation! Therefore, we must protect our muslims no matter the cost. Doing so, will win us popular support and root out any hatred towards us in Islamic majority Sulawesi\n\n\n\nNegotiating is invaluable and must begin immediately!"
+ IND_muslim: "Negotiate terms with Muslims in Sulawesi"
  IND_muslim2: "Give them proper combat training"
  IND_muslim3: "Set up local administrators"
  IND_muslim4: "Wrap up negotiations"
- IND_muslim_generic: "Transfer militiamen to Sulewesi"
+ IND_muslim_generic: "Transfer militiamen to Sulawesi"
  IND_muslim_generic2: "Relocate Christian construction projects"
  IND_muslim_generic3: "Fortify Mosques"
  #Back Christians
@@ -856,13 +856,13 @@
  IND_papua_generic3: "Fortify Churches"
  ##
  IND_back_noone: "Backing No One"
- IND_back_noone_desc: "It is important that the state does pick favorites over sensitive matters, such as that of religious conflict. We must begin the process of easing this tension, by both negotiations and militarization of points of conflict. \n\nDoing this will bring more calm to the Sulewesians and Papuans"
+ IND_back_noone_desc: "It is important that the state does pick favorites over sensitive matters, such as that of religious conflict. We must begin the process of easing this tension, by both negotiations and militarization of points of conflict. \n\nDoing this will bring more calm to the Sulawesians and Papuans"
  IND_neutral: "Hold unifying rallies in vary states"
- IND_neutral2: "Funds for new construction in Sulewesi"
+ IND_neutral2: "Funds for new construction in Sulawesi"
  IND_neutral3: "Funds Papuan churches"
  IND_neutral4: "Promise Papuans better representation"
- IND_neutral5: "Promise Sulewesian's better care"
- IND_neutral_generic: "Push enlistment programs for Papuans and Sulewesians"
+ IND_neutral5: "Promise Sulawesian's better care"
+ IND_neutral_generic: "Push enlistment programs for Papuans and Sulawesians"
  IND_neutral_generic2: "Militarize docks used for smuggling weapons"
  IND_neutral_generic3: "Militarize hotspots known for clashes"
  #DISASTER MECHANIC LOC
@@ -889,8 +889,8 @@
  indonesia.46.d: "Our failures to provide for the people of North Sumatra has resulted in an industrial accident leading to the damage of several production facilities"
  indonesia.46.a: "It was preventable!"
  #
- indonesia.47.t: "Disaster in Sulewesi!"
- indonesia.47.d: "Our failures to provide for the people of Sulewesi has resulted in an industrial accident leading to the damage of several production facilities"
+ indonesia.47.t: "Disaster in Sulawesi!"
+ indonesia.47.d: "Our failures to provide for the people of Sulawesi has resulted in an industrial accident leading to the damage of several production facilities"
  indonesia.47.a: "It was preventable!"
  #
  indonesia.48.t: "Disaster in Jakarta!"
@@ -921,8 +921,8 @@
  indonesia.56.d: "Our failures to provide for the people of West Papua has resulted in an aviational accident, causing major damage to the provincial airport!"
  indonesia.56.a: "It was preventable!"
  #
- indonesia.57.t: "Disaster in Sulewesi!"
- indonesia.57.d: "Our failures to build proper infrastructure in Sulewesi, has caused several buildings to collapse and kill many of our people"
+ indonesia.57.t: "Disaster in Sulawesi!"
+ indonesia.57.d: "Our failures to build proper infrastructure in Sulawesi, has caused several buildings to collapse and kill many of our people"
  indonesia.57.a: "It was preventable!"
  #
  indonesia.58.t: "Disaster in West Papua!"
@@ -1001,12 +1001,12 @@
  IND_papua_resist3: "Papuan Christian Resistance"
  IND_papua_resist4: "Papuan Christian Resistance"
  IND_papua_resist_info: "The christians of our land reside primariy in Papua. Sadly, they have been subject to abuse from past and current governments and the residents very much do not like us, which makes our political missions there a true challenge"
- IND_islamic_resist: "Sulewesian Muslim Resistance"
- IND_islamic_resist2: "Sulewesian Muslim Resistance"
- IND_islamic_resist3: "Sulewesian Muslim Resistance"
- IND_islamic_resist4: "Sulewesian Muslim Resistance"
- IND_islamic_resist_c1: "Minimal Sulewesian Muslim Resistance"
- IND_islamic_resist_info: "Sulewesi is one of our largest islands, and it is filled wih many different peoples. However, the large muslim majority is calling out the state for neglect and are putting up heavy resistance against much of our forces and economy. This resistance is making life very difficult for our men, and security forces"
+ IND_islamic_resist: "Sulawesian Muslim Resistance"
+ IND_islamic_resist2: "Sulawesian Muslim Resistance"
+ IND_islamic_resist3: "Sulawesian Muslim Resistance"
+ IND_islamic_resist4: "Sulawesian Muslim Resistance"
+ IND_islamic_resist_c1: "Minimal Sulawesian Muslim Resistance"
+ IND_islamic_resist_info: "Sulawesi is one of our largest islands, and it is filled wih many different peoples. However, the large muslim majority is calling out the state for neglect and are putting up heavy resistance against much of our forces and economy. This resistance is making life very difficult for our men, and security forces"
  #in the effect for the focus add "custom_effect_tooltip = name_of_tooltip"
  #Modify §YThe Insurgency in Aceh§! by \nOrganization Regain: §G+10%§! \nResistance Growth Speed: §G-5%§!\nCompliance: §G+5%§!\nMax Industries in State: §G+50%§!\nDivisions Speed: §G+5%§!
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Modify §YThe Insurgency in Aceh§! by \nOrganization Regain: §G+10%§! \nResistance Growth Speed: §G-5%§!\nCompliance: §G+5%§!\nMax Industries in State: §G+50%§!\nDivisions Speed: §G+5%§! \n"
