--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -11,7 +11,7 @@
  IND_japanese_aid: "Call for Japanese Aid"
  IND_japanese_aid_desc: "Despite our differences in the second world war, Japan has been fairly kind to us in our economic troubles. We should contact them and their western allies to help us out this situation"
  IND_japanese_aid_jica: "The JICA"
- IND_japanese_aid_jica_desc: "The JICA, also known as Japan International Cooperation Agency, can be a very useful organization in helpubg develop our nations infrastructure and roads"
+ IND_japanese_aid_jica_desc: "The JICA, also known as Japan International Cooperation Agency, can be a very useful organization in helping develop our nations infrastructure and roads"
  IND_japanese_aid_metro_invest: "Japanese Metro Investments"
  IND_japanese_aid_metro_invest_desc: "Our people need to get around the nation quickly, and with Japanese metro technology and investments we can achieve this goal of ours"
  IND_japanese_aid_java_airport: "West Java Airports"
@@ -831,7 +831,7 @@
  #MECHANICS AND DECISIONS
  # BAD LUCK MECHANIC
  IND_disasters_mechanic: "Indonesia's Terrible Luck"
- IND_disasters_mechanic_desc: "Indonesia is very lucky to have an abundance of natural resources, manpower and will-power to charge through the 21st century.\nHowever, §HIndonesia faces many challenges§! that §Rhinder its progress§!. Accident's are a §Rcommon theme§!, which would easily be prevented if it were not for better care for a particular region\n\nFor this reason, it is our duty and responsibility to pay more attention to our states in a timely manner in order to avoid a disasterous fate that would cause us serious harm\n\nWe Will continue to have disasters for a considerable amount of time, however if we tackle them quickly they eventually stop after some time!"
+ IND_disasters_mechanic_desc: "Indonesia is very lucky to have an abundance of natural resources, manpower and will-power to charge through the 21st century.\nHowever, §HIndonesia faces many challenges§! that §Rhinder its progress§!. Accident's are a §Rcommon theme§!, which would easily be prevented if it were not for better care for a particular region\n\nFor this reason, it is our duty and responsibility to pay more attention to our states in a timely manner in order to avoid a disastrous fate that would cause us serious harm\n\nWe Will continue to have disasters for a considerable amount of time, however if we tackle them quickly they eventually stop after some time!"
  ##Ethnic Tensions
  #Back Muslims
  IND_back_muslim: "Backing the Muslims"
@@ -856,13 +856,13 @@
  IND_papua_generic3: "Fortify Churches"
  ##
  IND_back_noone: "Backing No One"
- IND_back_noone_desc: "It is important that the state does pick favorites over sensitive matters, such as that of religious conflict. We must begin the process of easing this tension, by both negotiations and militarization of points of conflict. \n\nDoing this will bring more calm to the Sulawesians and Papuans"
+ IND_back_noone_desc: "It is important that the state does pick favorites over sensitive matters, such as that of religious conflict. We must begin the process of easing this tension, by both negotiations and militarization of points of conflict. \n\nDoing this will bring more calm to the Sulawesiana and Papuans"
  IND_neutral: "Hold unifying rallies in vary states"
  IND_neutral2: "Funds for new construction in Sulawesi"
  IND_neutral3: "Funds Papuan churches"
  IND_neutral4: "Promise Papuans better representation"
- IND_neutral5: "Promise Sulawesian's better care"
- IND_neutral_generic: "Push enlistment programs for Papuans and Sulawesians"
+ IND_neutral5: "Promise Sulawesian better care"
+ IND_neutral_generic: "Push enlistment programs for Papuans and Sulawesiana"
  IND_neutral_generic2: "Militarize docks used for smuggling weapons"
  IND_neutral_generic3: "Militarize hotspots known for clashes"
  #DISASTER MECHANIC LOC
@@ -874,8 +874,8 @@
  indonesia.42.d: "Our failures to provide for the people of West Papua has resulted in an industrial accident leading to the damage of several production facilities"
  indonesia.42.a: "It was preventable!"
  #
- indonesia.43.t: "Disaster in Moluccus!"
- indonesia.43.d: "Our failures to provide for the people of Moluccus has resulted in a scuffle at a popular shopping center, accident leading to major instability within the city!"
+ indonesia.43.t: "Disaster in Moluccas!"
+ indonesia.43.d: "Our failures to provide for the people of Moluccas has resulted in a scuffle at a popular shopping center, accident leading to major instability within the city!"
  indonesia.43.a: "It was preventable!"
  #
  indonesia.44.t: "Disaster in West Papua!"
@@ -897,8 +897,8 @@
  indonesia.48.d: "Our failures to provide for the people of Jakarta, our capital, has resulted in an industrial accident leading to the damage of several production facilities"
  indonesia.48.a: "It was preventable!"
  #
- indonesia.49.t: "Disaster in North Moluccus!"
- indonesia.49.d: "Our failures to provide for the people of North Moluccus has resulted in an industrial accident leading to the damage of several production facilities"
+ indonesia.49.t: "Disaster in North Moluccas!"
+ indonesia.49.d: "Our failures to provide for the people of North Moluccas has resulted in an industrial accident leading to the damage of several production facilities"
  indonesia.49.a: "It was preventable!"
  #
  indonesia.51.t: "Disaster in Lesser Sunda Islands!"
@@ -910,7 +910,7 @@
  indonesia.52.a: "It was preventable!"
  #
  indonesia.53.t: "Disaster in Kalimantan!"
- indonesia.53.d: "Our failures to provide for the people of Kalimantan has resulted in an aviational accident, causing major damage to the provincial airport!"
+ indonesia.53.d: "Our failures to provide for the people of Kalimantan has resulted in an aviation accident, causing major damage to the provincial airport!"
  indonesia.53.a: "It was preventable!"
  #
  indonesia.54.t: "Disaster in South Sumatra!"
@@ -918,7 +918,7 @@
  indonesia.54.a: "It was preventable!"
  #
  indonesia.56.t: "Disaster in West Papua!"
- indonesia.56.d: "Our failures to provide for the people of West Papua has resulted in an aviational accident, causing major damage to the provincial airport!"
+ indonesia.56.d: "Our failures to provide for the people of West Papua has resulted in an aviation accident, causing major damage to the provincial airport!"
  indonesia.56.a: "It was preventable!"
  #
  indonesia.57.t: "Disaster in Sulawesi!"
@@ -926,7 +926,7 @@
  indonesia.57.a: "It was preventable!"
  #
  indonesia.58.t: "Disaster in West Papua!"
- indonesia.58.d: "Our failures to provide proper  management for West Papua has resulted in an incident where one of our military factories came crumbling down"
+ indonesia.58.d: "Our failures to provide proper management for West Papua has resulted in an incident where one of our military factories came crumbling down"
  indonesia.58.a: "It was preventable!"
  #
  indonesia.59.t: "Disaster in Papua!"
@@ -942,7 +942,7 @@
  indonesia.62.a: "It was preventable!"
  #
  indonesia.63.t: "Disaster in the skies!"
- indonesia.63.d: "Our Failures to provide proper aviational equipment has led to the technical failures on one of our flights, causing many to die!"
+ indonesia.63.d: "Our Failures to provide proper aviation equipment has led to the technical failures on one of our flights, causing many to die!"
  indonesia.63.a: "It was preventable!"
  #
  indonesia.64.t: "Disaster in our Capital!!"
